This file only list changes to game code.  Changes to content can be found here:

http://onehouronelife.com/updateLog.php



Version 410   ???

--Support for AHAP differentiation with a text file in the game folder.  AHAP
  clients skip universal _all.dbz content diff bundles.



Version 409   2024-January-13

--Editor now supports import_add and import_replace folders, for loading
  exported OXZ files permanently into the local content data on disk.
  Collaborators can now share content that they are working on with each other.

--Editor pickers now accept raw ID numbers in search boxes, pulling up
  object/sprite that matches that ID.

--Editor pickers NEXT/PREV buttons now jump 25 on CTRL, 125 on SHIFT, and 625
  on CTRL+SHIFT.  You can now page through all official OHOL items in 7 clicks,
  where it used to be 35 clicks.  Part of #998

--Editor Object pickers now allow you to search for field<=>value, like MapP>0
  or person=1 or food>16.  Most of the fields and checkboxes from the Object
  editor are supported by name.  Part of #998

--Refactored Pickable.h code to use inItem instead of inObject to avoid
  confusion (because Objects are only one type of pickable).

--Editor Sprite pickers now allow field<=>value search, like solid=0 or
  visibleW>200.  Part of #998

--Tutorial text now explains forgiving instead of expiring curses.  Thanks
  Spoonwood.  Fixes #1003

--Moved a bunch of content-related settings from both client and server into
  contentSettings, as to be distributed with platform-independent content
  update bundles.  Thus, these content-related settings chan be changed without
  posting platform-specific binary builds.  This will also allow future content
  editors to tweak these content settings (like number of biomes, etc.) without
  pushing binary builds.  Special cases in client/server code switch the
  SettingsManager temporarily to the contentSettings folder when loading these
  settings.  
