@@ -170,6 +170,13 @@ port "PORT:"
 downloadingUpdate "DOWNLOADING UPDATE"
 applyingUpdate "APPLYING UPDATE"
 
+
+downloadingUpdateAHAP "DOWNLOADING LATEST USER-GENERATED CONTENT"
+applyingUpdateAHAP "INSTALLING LATEST USER-GENERATED CONTENT"
+
+
+
+
 serverShutdownMessage "THE SERVERS HAVE BEEN##SHUT DOWN FOR MAINTENANCE.##PLEASE TRY AGAIN LATER."
 
 upgradeMessage "PLEASE DOWNLOAD THE LATEST VERSION"
